Hid FB stuff on small screens because they break everything. Will badger @Daniel15 to fix :<

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -384,7 +384,3 @@ footer {
 }
 
 
-
-div.fb-like {
-  max-width: 300px;
-}
